--- a/BlazorShop.Api/appsettings.json
+++ b/BlazorShop.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-GVGGVD4\\SQLEXPRESS;Database=NOME_DATABASE;User Id=admin;Password=1234;"
+    "DefaultConnection": "Server=DESKTOP-GVGGVD4\\SQLEXPRESS;Database=ShopDb_Dev;User Id=admin;Password=1234;"
   },
   "Logging": {
     "LogLevel": {
