Criação da web application e da aba Produtos e organizados por categoria

--- a/BlazorShop.Web/BlazorShop.Web.csproj
+++ b/BlazorShop.Web/BlazorShop.Web.csproj
@@ -15,4 +15,11 @@
     <ProjectReference Include="..\BlazorShop.Models\BlazorShop.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Imagens\Calcados\" />
+    <Folder Include="wwwroot\Imagens\Beleza\" />
+    <Folder Include="wwwroot\Imagens\Moveis\" />
+    <Folder Include="wwwroot\Imagens\Eletronicos\" />
+  </ItemGroup>
+
 </Project>
